fix: layout, page alignment, font sizes etc.

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   background: var(--primary-color);
   position: absolute;
-  bottom: calc(var(--footer-height-negative) - 0.75rem);
+  // bottom: calc(var(--footer-height-negative) - 0.75rem);
   left: 0;
   width: 100%;
   height: var(--footer-height);
