--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -1,18 +1,19 @@
 .main-content {
   margin-top: var(--nav-height); /* '.navbar' height */
-  position: absolute;
   width: 100%;
+  min-height: calc(100vh - var(--nav-height));
+  display: flex;
 }
 
 .main-content-wrapper {
   width: var(--wrapper-width);
-  margin: 0 auto;
+  margin: auto;
 }
 
 .social-links {
   position: fixed;
   left: 20px;
-  top: 40%;
+  top: 30%;
   z-index: 100;
 
   @media screen and (max-width: 450px) {
@@ -21,5 +22,13 @@
 
   @media screen and (max-width: 450px) {
     left: 10px;
+  }
+
+  @media screen and (max-width: 300px) {
+    display: none;
+  }
+
+  @media screen and (max-height: 350px) {
+    display: none;
   }
 }
