--- a/src/pages/ContactPage.module.scss
+++ b/src/pages/ContactPage.module.scss
@@ -1,9 +1,9 @@
 .contact-section {
-  height: calc(90vh - var(--nav-height));
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 
   .contact-container {
     width: 500px;
@@ -11,13 +11,14 @@
 
   .contact-title {
     text-align: center;
-    font-size: 4rem;
+    font-size: var(--title-font-size);
     margin: 0;
   }
 
   .contact-subtitle {
     text-align: center;
-    margin-bottom: 6rem;
+    margin-bottom: 5rem;
+    font-size: var(--subtitle-font-size);
   }
 
   .contact-form {
@@ -60,7 +61,7 @@
   .btn-download {
     display: inline-flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     height: 5rem;
     cursor: pointer;
     background-color: var(--primary-color);
